;Judge/Temporary_Error/293.log
In file included from code.cpp:1:0:
../../data/1012/1012_5.out:1:1: error: expected unqualified-id before numeric constant
 37.00 16.00 19.00 47.00 6.00 20.00 0.00 5.00 10.00 36.00 37.00 16.00 19.00 47.00 6.00 20.00 0.00 5.00 10.00 36.00 7.00 42.00 49.00 19.00 49.00 7.00 43.00 23.00 33.00 8.00 39.00 16.00 13.00 17.00 35.00 2.00 49.00 40.00 4.00 37.00 16.00 19.00 47.00 6.00 20.00 0.00 5.00 10.00 36.00 9.00 19.00 32.00 0.00 3.00 21.00 17.00 18.00 30.00 19.00 33.00 37.00 16.00 19.00 47.00 6.00 20.00 0.00 5.00 10.00 36.00 37.00 16.00 19.00 47.00 6.00 20.00 0.00 5.00 10.00 36.00 7.00 42.00 49.00 19.00 49.00 7.00 43.00 23.00 33.00 8.00 
 ^
